<resources>
    <string name="app_name">BitFit</string>
    <string name="calories">Calories</string>
    <string name="enter_calories">Enter Calories</string>
    <string name="calories_add_view">Calories:</string>
    <string name="enter_food_name">Enter Food Name</string>
    <string name="food_text_add_view">Food:</string>
    <string name="record_this_food">RECORD THIS FOOD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>