<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/add_food_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_text_add_view"
        app:layout_constraintEnd_toStartOf="@+id/foods_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/foods_edit_text"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/foods_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:hint="@string/enter_food_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/add_food_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/add_food_name"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/add_calories_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="8dp"
        android:text="@string/calories_add_view"
        app:layout_constraintEnd_toStartOf="@+id/calories_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/foods_edit_text" />

    <EditText
        android:id="@+id/calories_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/enter_calories"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_calories_count"
        app:layout_constraintTop_toBottomOf="@id/add_calories_count" />

    <Button
        android:id="@+id/addFoodButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record_this_food"
        app:layout_constraintTop_toBottomOf="@id/calories_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>